final update on second problem